# saith

./: Cargo.toml  LICENSE  README.md
src/: dictation.rs  executor.rs  indicator_message.rs  indicator_state.rs  main.rs  pipeline_state.rs
src/audio/: mod.rs  pipeline.rs  resampling.rs  source.rs  test_source.rs  vad.rs
src/configuration/: mod.rs
src/hotkey/: evdev_provider.rs  event_routing.rs  mod.rs  provider.rs
src/indicator/: application.rs  mod.rs  position.rs  theme.rs
src/output/: mod.rs  typing.rs
src/transcription/: mod.rs  model_management.rs  whisper.rs  whisper_rs_backend.rs
